# uvdata-rust

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build_and_test.yaml
src/: base.rs  lib.rs  utils.rs  uvh5.rs
tests/: tests.rs
tests/data/: mwa128_layouts.h5  test_multiphase.uvh5  test_phased.uvh5
