[package]
name = "uvdata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "uvdata"
test = true
bench = false

[dependencies]
num-complex = "0.4"
num-traits = "^0.2"
ndarray = { version = "0.15.3", features = ["approx", "serde"]}
hdf5 = { version = "0.8", features = ["lzf"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
